syntax = "proto3";

package auth;

option go_package = "compiled-protobuf/auth";

service Auth {
  rpc LogIn(LogInRequest) returns (LogInResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc LogOut(LogOutRequest) returns (LogOutResponse) {}
  rpc CloseSessions(CloseSessionsRequest) returns (CloseSessionsResponse) {}
  rpc AddPermission(AddPermissionRequest) returns (AddPermissionResponse) {}
  rpc RevokePermission(RevokePermissionRequest) returns (RevokePermissionResponse) {}
  rpc GetPermissions(GetPermissionsRequest) returns (GetPermissionsResponse) {}
  rpc AddRolePermission(AddRolePermissionRequest) returns (AddRolePermissionResponse) {}
  rpc RevokeRolePermission(RevokeRolePermissionRequest) returns (RevokeRolePermissionResponse) {}
  rpc GetRolePermissions(GetRolePermissionsRequest) returns (GetRolePermissionsResponse) {}
  rpc AddRole(AddRoleRequest) returns (AddRoleResponse) {}
  rpc RevokeRole(RevokeRoleRequest) returns (RevokeRoleResponse) {}
  rpc GetRoles(GetRolesRequest) returns (GetRolesResponse) {}
  rpc AddUserRole(AddUserRoleRequest) returns (AddUserRoleResponse) {}
  rpc RevokeUserRole(RevokeUserRoleRequest) returns (RevokeUserRoleResponse) {}
  rpc GetUserRoles(GetUserRolesRequest) returns (GetUserRolesResponse) {}
}

message LogInRequest {
  string username = 1;
  string password = 2;
}

message LogInResponse {
  uint32 code = 1;
  string message = 2;
  string access_token = 3;
  string refresh_token = 4;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshTokenResponse {
  uint32 code = 1;
  string message = 2;
  string access_token = 3;
  string refresh_token = 4;
}

message LogOutRequest {
  string refresh_token = 1;
}

message LogOutResponse {
  uint32 code = 1;
  string message = 2;
}

message CloseSessionsRequest {
  string email = 1;
}

message CloseSessionsResponse {
  uint32 code = 1;
  string message = 2;
}

message AddPermissionRequest {
  string permission = 1;
}

message AddPermissionResponse {
  uint32 code = 1;
  string message = 2;
}

message RevokePermissionRequest {
  string permission = 1;
}

message RevokePermissionResponse {
  uint32 code = 1;
  string message = 2;
}

message GetPermissionsRequest {}

message GetPermissionsResponse {
  uint32 code = 1;
  string message = 2;
  repeated string permissions = 3;
}

message AddRolePermissionRequest {
  string role = 1;
  string permission = 2;
}

message AddRolePermissionResponse {
  uint32 code = 1;
  string message = 2;
}

message RevokeRolePermissionRequest {
  string role = 1;
  string permission = 2;
}

message RevokeRolePermissionResponse {
  uint32 code = 1;
  string message = 2;
}

message GetRolePermissionsRequest {
  string role = 1;
}

message GetRolePermissionsResponse {
  uint32 code = 1;
  string message = 2;
  repeated string permissions = 3;
}

message AddRoleRequest {
  string role = 1;
}

message AddRoleResponse {
  uint32 code = 1;
  string message = 2;
}

message RevokeRoleRequest {
  string role = 1;
}

message RevokeRoleResponse {
  uint32 code = 1;
  string message = 2;
}

message GetRolesRequest {}

message GetRolesResponse {
  uint32 code = 1;
  string message = 2;
  repeated string roles = 3;
}

message AddUserRoleRequest {
  string user = 1;
  string role = 2;
}

message AddUserRoleResponse {
  uint32 code = 1;
  string message = 2;
}

message RevokeUserRoleRequest {
  string user = 1;
  string role = 2;
}

message RevokeUserRoleResponse {
  uint32 code = 1;
  string message = 2;
}

message GetUserRolesRequest {
  string user = 1;
}

message GetUserRolesResponse {
  uint32 code = 1;
  string message = 2;
  repeated string roles = 3;
}